syntax="proto3";

//package proto;

service MathFunction{
    rpc Add (AddRequest) returns (AddResponse);
    rpc Subtraction (SubtractionRequest) returns (SubtractionResponse);
}

message AddRequest{
    int32 p1=1;
    int32 p2=2;
    int32 p3=3;
}

message AddResponse{
    int32 result=1;
}

message SubtractionRequest{
    int32 p1=1;
    int32 p2=2;
}

message SubtractionResponse{
    int32 result=1;
}